Fix overflows

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,6 +1,6 @@
 .App {
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 button,
