--- a/src/styles/Playlist.module.css
+++ b/src/styles/Playlist.module.css
@@ -1,4 +1,4 @@
 .Playlist {
-  /* width: 50%; */
   width: 100vw;
+  overflow: auto;
 }
