--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,5 +1,7 @@
 .Search {
   width: 100vw;
+  overflow: auto;
+  margin-top: 64px;
 }
 
 .SearchResults {
